Added: refresh shopping cart if anything changes

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -75,5 +75,6 @@
   "editShoppingList": "Einkaufsliste bearbeiten",
   "nameOfShoppingList": "Name der Einkaufsliste",
   "selectTemplateProduct": "Vorlage auswählen",
-  "total": "Gesamt"
+  "total": "Gesamt",
+  "more": "Mehr"
 }
