--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -75,5 +75,6 @@
   "editShoppingList": "Edit Shopping List",
   "nameOfShoppingList": "Name of Shopping List",
   "selectTemplateProduct": "Select Template",
-  "total": "Total"
+  "total": "Total",
+  "more": "More"
 }
