Added: Icon and some more styling and edit possibilities

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -76,5 +76,7 @@
   "nameOfShoppingList": "Name der Einkaufsliste",
   "selectTemplateProduct": "Vorlage auswählen",
   "total": "Gesamt",
-  "more": "Mehr"
+  "more": "Mehr",
+  "price": "Preis",
+  "name": "Name"
 }
