--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -76,5 +76,7 @@
   "nameOfShoppingList": "Name of Shopping List",
   "selectTemplateProduct": "Select Template",
   "total": "Total",
-  "more": "More"
+  "more": "More",
+  "price": "Price",
+  "name": "Name"
 }
