TODO: Data is not updating (Especially the discount bool in product.dart stays??)

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -78,5 +78,7 @@
   "total": "Gesamt",
   "more": "Mehr",
   "price": "Preis",
-  "name": "Name"
+  "name": "Name",
+  "discount": "Rabatt",
+  "savedProductsTemplates": "Gespeicherte Produktvorlagen"
 }
