--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -78,5 +78,7 @@
   "total": "Total",
   "more": "More",
   "price": "Price",
-  "name": "Name"
+  "name": "Name",
+  "discount": "Discount",
+  "savedProductsTemplates": "Saved Products Templates"
 }
